--- a/src/views/pages/err/404/404.njk
+++ b/src/views/pages/err/404/404.njk
@@ -3,7 +3,7 @@
 {% from "universal/_header.njk" import header %}
 {{ header() }}
 
-<body class="auth-theme-rashmore">
+<body>
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar() }}
 
