--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -23,7 +23,7 @@
     name: "Kaige Zhang",
     subtitle: "Ph.D. Research Assistant | CS",
     modifier: "Zhang",
-    type: "Bioinformatics Staff",
+    type: "Alumni",
     bio: "Kaige Zhang is a research associate at The Center for Integrated BioSystems. He received his
       Ph.D. degree in computer science with Utah State University in 2019, the B.S. degree in electronic
       engineering from Harbin Institute of Technology, China, in 2011, and M.S. degree in signal and
@@ -69,7 +69,7 @@
     name: "Suyash Mhetre",
     subtitle: "MS Student | MIS",
     modifier: "Suyash",
-    type: "Graduate",
+    type: "Alumni",
     bio: "",
     email: "suyash.mhetre@aggiemail.usu.edu",
     img: "assets/img/profile/suyash.jpg",
@@ -93,7 +93,7 @@
     name: "Matthew Lister",
     subtitle: "HPC Administrator | CS",
     modifier: "Matthew",
-    type: "Graduate",
+    type: "Alumni",
     bio: "Matthew is the systems administrator of the high performance cluster for the bioinformatics group. A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users. Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his plan of study.",
     email: "matthew.lister@aggiemail.usu.edu",
     img: "assets/img/profile/mat.jfif",
@@ -161,9 +161,9 @@
   }
 %}
 
-{% set staff = [roussie, kaige, cristian, naveen, suyash, nikhil, matt, shelby] %}
+{% set staff = [roussie, cristian, naveen, nikhil, shelby] %}
 
-{% set bioinfoStaff = [roussie, kaige] %}
-{% set gradStudents = [cristian, naveen, suyash, nikhil, matt] %}
+{% set bioinfoStaff = [roussie] %}
+{% set gradStudents = [cristian, naveen, nikhil] %}
 {% set undergradStudents = [shelby] %}
-{% set alumni = [udarika, raul, caleb] %}
+{% set alumni = [udarika, raul, caleb, matt, suyash, kaige] %}
