--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -37,7 +37,7 @@
     {% from "components/person-card.njk" import personCardModal %}
     {% from "./people-data.njk" import bioinfoStaff, gradStudents, undergradStudents, alumni %}
 
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-12">
         <div class="kbl-header-bar text-center py-2">
           <h4 class="kbl-heading my-auto">Bioinformatics Staff</h4>
