--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-{% set bs4 = true %}
 <html class="no-js" lang="en">
 
 {% from "universal/_header.njk" import header %}
-{{ header("lab_research", bs4=bs4) }}
+{{ header("lab_research") }}
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
@@ -216,7 +215,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts(bs4=bs4) }}
+  {{ scripts() }}
 </body>
 
 </html>
