--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-{% set bs4 = true %}
 {% from "universal/_header.njk" import header %}
-{{ header(bs4=bs4) }}
+{{ header() }}
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
@@ -99,7 +98,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts(bs4=bs4) }}
+  {{ scripts() }}
 </body>
 
 </html>
