--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-{% set bs4 = true %}
 <html class="no-js" lang="en">
 {% from "universal/_header.njk" import header %}
-{{ header(bs4=bs4) }}
+{{ header() }}
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
@@ -44,7 +43,7 @@
   <main class="sabbi-page-wrap">
       <section class="section-journal-papers">
           <div class="container">
-              <nav class="journal-papers-nav">
+              <nav class="journal-papers-nav d-inline">
                   <ul class="journal-papers-nav-list list-inline">
                          <li><button class="tablinks" onclick="openJournal(event, '17-19')" style=" background: transparent; border: none !important;">
                               <a href="#tabcontent" class="link-prev_def active">2017-2019</a>
@@ -633,7 +632,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts(bs4=bs4) }}
+  {{ scripts() }}
 </body>
 
 </html>
