--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-{% set bs4=true %}
 {% from "universal/_header.njk" import header %}
-{{ header("events", bs4=bs4) }}
+{{ header("events") }}
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
@@ -332,7 +331,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts(bs4=bs4) }}
+  {{ scripts() }}
 </body>
 
 </html>
