--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -1,4 +1,4 @@
-{% macro header(css="", bs4=false, scss=false, modernizr=true) %}
+{% macro header(css="", bs4=true, scss=false, modernizr=true) %}
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -10,12 +10,8 @@
     <link rel="stylesheet" href="assets/kbl-css/style.css">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Latest compiled and minified CSS -->
-    {% if bs4 %}
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    {% endif %}
-    {% if not bs4 %}
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    {% endif %}
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Open+Sans:400,400i,600,700" rel="stylesheet">
     <link href="assets/fonts/ionicons/css/ionicons.css" rel="stylesheet" type="text/css" />
     <link href="assets/fa/css/all.min.css" rel="stylesheet" type="text/css" />
