--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -4,7 +4,7 @@
 {{ header() }}
 
 <body>
-  {% from "universal/_navbar-bs4.njk" import navbar %}
+  {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("People", "Our Team") }}
 
 <!--
@@ -41,7 +41,7 @@
   </article>
 
   <article class="container">
-    {% include "../_rakesh.njk" %}
+    {% include "../_new-rakesh.njk" %}
 
     {% from "components/person-card.njk" import personCardModal %}
     {% from "../people-data.njk" import bioinfoStaff, gradStudents, undergradStudents %}
