--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -5,7 +5,7 @@
 {{ header("lab_research") }}
 
 <body>
-  {% from "universal/_navbar-bs4.njk" import navbar %}
+  {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Research", "Lab Research") }}
 
   <!--
