--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -4,7 +4,7 @@
 {{ header() }}
 
 <body class="auth-theme-rashmore">
-  {% from "universal/_navbar-bs4.njk" import navbar %}
+  {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("People", "Dr. Rakesh Kaundal") }}
 
   <header class="sabbi-page-header-classic page-header-lg">
