--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -4,7 +4,7 @@
 {{ header("lab_conf-talk") }}
 
 <body>
-  {% from "universal/_navbar-bs4.njk" import navbar %}
+  {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Publications", "Conferences") }}
 
   <!--
