--- a/src/views/pages/research/template.njk
+++ b/src/views/pages/research/template.njk
@@ -6,7 +6,7 @@
   {{ header() }}
 
   <body>
-    {% from "universal/_navbar-bs4.njk" import navbar %}
+    {% from "universal/_navbar.njk" import navbar %}
     {{ navbar("Research") }}
 
     <div class="container-fluid blog" style="margin-top: 103px;">
