--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -13,3 +13,5 @@ $transparent: rgba(#fff, 0);
 $color-text-hard: #282828;
 $color-text-main: #2d2d2d;
 $color-text-soft: #777;
+
+$color-btn-gray: #c4c4c4;
