--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -14,7 +14,7 @@
     <section class="sabbbi-section home-info mt_35">
         <div class="container">
             <div class="row home-info-block-first">
-              {% include "./multi-carousel.njk" %}
+              {% include "./_multi-carousel-new.njk" %}
             </div>
             <div class="row mt_30">
                 <div class="col-sm-4">
