--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -166,7 +166,7 @@
                           </div>
                       </div>
                       <button class="btn btn-primary leftLst">
-                          </button> <button class="btn btn-primary rightLst">
+                          <</button> <button class="btn btn-primary rightLst">>
                       </button>
                   </div>
 
