--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -77,6 +77,8 @@ div#sliding_animation ul {
 .MultiCarousel .MultiCarousel-inner {
     transition: 1s ease all;
     float: left;
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .MultiCarousel .MultiCarousel-inner .item {
