--- a/src/views/pages/home/multi-carousel.njk
+++ b/src/views/pages/home/multi-carousel.njk
@@ -1,8 +1,8 @@
 <div class="MultiCarousel" data-items="1,2,3,4" data-slide="1" id="MultiCarousel" data-interval="100">
     <div class="MultiCarousel-inner" id="content">
-        <div class="col-md-3 col-sm-6 item">
+        <div class="col-md-3 col-sm-6 item" style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/AI-processor-LowRes-v1.jpg" alt=""
                             class="img-responsive img-thumpost">
@@ -17,9 +17,9 @@
                 </article>
             </div>
         </div>
-        <div class="col-md-3 col-sm-6 item">
+        <div class="col-md-3 col-sm-6 item" style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/HPI_new.gif" alt=""
                             class="img-responsive img-thumpost">
@@ -34,9 +34,9 @@
                 </article>
             </div>
         </div>
-        <div class="col-md-3 col-sm-6 item">
+        <div class="col-md-3 col-sm-6 item"style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/functionalbg_resized.png" alt=""
                             class="img-responsive img-thumpost">
@@ -51,9 +51,9 @@
                 </article>
             </div>
         </div>
-        <div class="col-md-3 col-sm-6 item">
+        <div class="col-md-3 col-sm-6 item" style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/meta_new.png" alt="" class="img-responsive img-thumpost">
                     </figure>
@@ -67,10 +67,10 @@
                 </article>
             </div>
         </div>
-        
-        <div class="col-md-3 col-sm-6 item">
+
+        <div class="col-md-3 col-sm-6 item" style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/sabbi-post/p_agr.jpg" alt=""
                             class="img-responsive img-thumpost">
@@ -85,9 +85,9 @@
                 </article>
             </div>
         </div>
-        <div class="col-md-3 col-sm-6 item">
+        <div class="col-md-3 col-sm-6 item" style="height: 465px;">
             <div class="pad15">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
+                <article class="sabbi-thumlinepost-card solitude-bg__x" style="height: 465px;">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img src="assets/img/datamining-lowres.png" alt=""
                             class="img-responsive img-thumpost">
@@ -104,6 +104,6 @@
         </div>
     </div>
 
-        <button class="btn btn-primary leftLst" ><</button>
-            <button class="btn btn-primary rightLst">></button>
+        <button class="btn btn-primary leftLst" ><b><</b></button>
+            <button class="btn btn-primary rightLst"><b>></b></button>
 </div>
