Fixed column sizing on elements in home page

--- a/pages/lab_research/lab_research.css
+++ b/pages/lab_research/lab_research.css
@@ -19,6 +19,8 @@ hr {
 .MultiCarousel .MultiCarousel-inner {
     transition: 1s ease all;
     float: left;
+    display: flex;
+    flex-wrap: nowrap
 }
 
 .MultiCarousel .MultiCarousel-inner .item {
