--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -50,128 +50,10 @@
                   </div>
               </div>
           </section>
-          <section class="icon-card-segment">
-              <div class="row home-info-block-first">
-                  <div class="MultiCarousel" data-items="1,2,3,4" data-slide="1" id="MultiCarousel"
-                      data-interval="100">
-                      <div class="MultiCarousel-inner" id="content">
-
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/AI-processor-LowRes-v1.jpg" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5" style="text-align: left;">Artificial
-                                              Intelligence:
-                                              OMICS bigdata to novel biological discoveries</h2>
-                                          <p class="meta-text">Computational modeling through <i>pattern
-                                                  recognition</i>,
-                                              develop novel algorithms and...</p>
-                                          <a href="research_single.html?research=ai" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/hpis_Resized.gif" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5" style="text-align: left;">Host-pathogen
-                                              interactions: Understanding mechanisms of infectious diseases</h2>
-                                          <p class="meta-text">Explore cross-kingdom threats and identify novel
-                                              therapeutic candidates...</p>
-                                          <a href="research_single.html?research=hpi" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/functionalbg_resized.png" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5" style="text-align: left;">Protein function
-                                              prediction: Annotation of novel proteomes</h2>
-                                          <p class="meta-text">Identify novel protein features, train in an AI
-                                              framework,
-                                              implement as web servers... </p>
-                                          <a href="research_single.html?research=protein" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/meta_new.png" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5">Metagenomics: Bioinformatics solutions for crop
-                                              improvement</h2>
-                                          <p class="meta-text">Investigate diversity of enzymes in soil metagenomes
-                                              and
-                                              develop advanced tools...</p>
-                                          <a href="research_single.html?research=metagenomics" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/sabbi-post/p_agr.jpg" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5">Precision Agriculture: Robotics for integrated
-                                              weed
-                                              management (IWM)</h2>
-                                          <p class="meta-text">Incorporate sensing technology for precise IWM,
-                                              minimize
-                                              damage to crop, environment...</p>
-                                          <a href="research_single.html?research=agriculture" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                          <div class="col-md-3 col-sm-6 item">
-                              <div class="pad15">
-                                  <article class="sabbi-thumlinepost-card solitude-bg__x">
-                                      <figure class="sabbi-thumlinepost-card-figure">
-                                          <img src="assets/img/datamining-lowres.png" alt=""
-                                              class="img-responsive img-thumpost">
-                                      </figure>
-                                      <div class="sabbi-thumlinepost-card-meta">
-                                          <h2 class="meta-title ht-5">NGS studies: Deciphering and making sense of the
-                                              complex -<i>omics</i> bigdata</h2>
-                                          <p class="meta-text">Identification of novel expressed genes from
-                                              transcriptomics studies, methylation patterns...</p>
-                                          <a href="research_single.html?research=ngs" class="btn btn-unsolemn btn-action read-more">Read More</a>
-                                      </div>
-                                  </article>
-                              </div>
-                          </div>
-                      </div>
-                      <button class="btn btn-primary leftLst">
-                          <</button> <button class="btn btn-primary rightLst">>
-                      </button>
-                  </div>
-
-              </div>
-
+          <section class="container-fluid">
+            <div class="row home-info-block-first">
+              {% include 'pages/home/_multi-carousel-new.njk' %}
+            </div>
           </section>
           <!-- /.icon-card-segment -->
           <section class="sabbi-section stage-samevide mb_0">
