--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -11,91 +11,77 @@
         {% include "./_head-carousel.njk" %}
     </header><!-- /.sabbi-site-head -->
 
-    <section class="sabbbi-section home-info mt_35">
-        <div class="container">
-            <div class="row home-info-block-first">
-              {% include "./_multi-carousel-new.njk" %}
-            </div>
-            <div class="row mt_30">
-                <div class="col-sm-4">
-                    <article class="news-card sabbi-thumlinepost-card solitude-bg__x">
-                        <h2 class="stage-title">Latest News:</h2>
-                        <ul class="list-unstyled lst_news_list" tabindex="0">
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="http://bioinfo.usu.edu/covidTracker/"
-                                        target="_blank">Covid 19 tracker built by KAABiL is online</i></a>
-                                </h3>
-                                <div>
-                                    <span class="date">April 10, 2020</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="events_single.html">Host-pathogen interaction paper accepted in Briefings in Bioinformatics</a></h3>
-                                <div>
-                                    <span class="date">Nov 20, 2019</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="https://doi.org/10.1093/aobpla/plz068"
-                                        target="_blank">Plant-mSubP subcellular localization tool accepted for
-                                        publication in <i>AoB Plants</i></a></h3>
-                                <div>
-                                    <span class="date">Oct 08, 2019</span>
-                                </div>
-                            </li>
+    <article class="container mt-5">
+      <section class="row home-info-block-first">
+        {% include "./_multi-carousel-new.njk" %}
+      </section>
 
-                        </ul>
-                        <a href="news.html" class="btn btn-unsolemn btn-action read-more">VIEW ALL</a>
-                    </article>
-                </div>
-                <div class="col-sm-4">
-                    <article class="sabbi-thumlinepost-card card-video solitude-bg__x">
-                        <figure class="sabbi-thumlinepost-card-figure">
-                            <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY"
-                                data-toggle="modal" data-target="#videoModal"><img src="assets/img/rs_usu_winter.jpg" alt=""
-                                    class="img-fluid img-thumpost"></a>
-                            <figcaption>Dr. Kaundal's Remarkable Journey</figcaption>
-                        </figure>
-                        <div class="modal fade" id="videoModal" tabindex="-1">
-                          {% include "./video-modal.njk" %}
-                        </div>
-                        <h3 class="entry-title"><a href="#">Dr. Kaundal's Remarkable Journey</a></h3>
-                        <p class="entry-text">Our research have appeared in high-impact journals including <i>Briefings
-                                in Bioinformatics</i>, <i>Plant Physiology</i>, <i>Proteomics</i>, <i>AoB Plants</i>,
-                            and many others</p>
-                    </article>
-                </div>
-                <div class="col-sm-4">
-                    <article class="news-card sabbi-thumlinepost-card solitude-bg__x">
-                        <h2 class="stage-title">Latest Events:</h2>
-                        <ul class="list-unstyled lst_news_list" tabindex="0">
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="events_single.html?event=psc">PSC Showcase</a></h3>
-                                <div>
-                                    <span class="date">March 23, 2019</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="events_single.html?event=rocky">Rocky Bioinformatics
-                                        Conference</a></h3>
-                                <div>
-                                    <span class="date">December 5-7, 2018</span>
-                                </div>
-                            </li>
-                            <li class="lst_news_item">
-                                <h3 class="title mg_0"><a href="events_single.html?event=osu">Won President's Cup at
-                                        OSU</a></h3>
-                                <div>
-                                    <span class="date">December 10, 2013</span>
-                                </div>
-                            </li>
-                        </ul>
-                        <a href="lab_events.html" class="btn btn-unsolemn btn-action read-more">VIEW ALL</a>
-                    </article>
-                </div>
-            </div>
+      <section class="row mt-5">
+        <div class="col-4">
+          <div class="h-100 gray-bg py-3 px-4">
+            <h5 class="kbl-heading pb-2">Latest News:</h5>
+
+            <section class="home-news-item py-3">
+              <a class="hn-header shrink d-inline-block" href="http://bioinfo.usu.edu/covidTracker/">COVID-19 tracker built by KAABiL is online</a>
+              <div class="hn-date">April 10, 2020</div>
+            </section>
+
+            <section class="home-news-item py-3">
+              <a class="hn-header shrink d-inline-block" href="/events">Host-pathogen interaction paper accepted in Briefings in Bioinformatics</a>
+              <div class="hn-date">Nov 20, 2019</div>
+            </section>
+
+            <section class="home-news-item py-3">
+              <a class="hn-header shrink d-inline-block" href="/events">Plant-mSubP subcellular localization tool accepted for publication in AoB Plants</a>
+              <div class="hn-date">Oct 8, 2019</div>
+            </section>
+
+            <h6 class="kbl-heading pt-3 mt-auto">View All</h6>
+          </div>
         </div>
-    </section><!-- /.home-info -->
+
+        <div class="col-4">
+          <div class="h-100 gray-bg">
+            <section class="mb-3">
+              <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-toggle="modal" data-target="#videoModal">
+                <img src="assets/img/rs_usu_winter.jpg" alt="" class="img-fluid">
+              </a>
+            </section>
+            <section class="px-4">
+              <div class="kbl-heading text-center remarkable">Dr. Kaundal's Remarkable Journey</div>
+              <p class="kbl-text text-center">
+                Our research has appeared in high-impact journals including <i>Briefingsin Bioinformatics</i>,
+                <i>Plant Physiology</i>, <i>Proteomics</i>, <i>AoB Plants</i>, and many more
+              </p>
+            </section>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="h-100 gray-bg py-3 px-4">
+            <h5 class="kbl-heading pb-2">Latest Events:</h5>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="http://bioinfo.usu.edu/covidTracker/">PSC Showcase</a>
+              <div class="hn-date">March 23, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events">Rocky Bioinformatics Conference</a>
+              <div class="hn-date">December 5-7, 2018</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events">Won President's Cup at OSU</a>
+              <div class="hn-date">December 10, 2013</div>
+            </section>
+
+            <h6 class="kbl-heading pt-3 mb-auto">View All</h6>
+          </div>
+        </div>
+      </section>
+    </article>
+
     <section class="section-brand_quickfact section">
         <div class="container">
             <div class="brand_quickfact-wrap">
