Fix columns on main page

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,8 +10,8 @@ $color-border-gray: #d1d1d1;
 $color-bg-gray: #f2f2f2;
 
 $transparent: rgba(#fff, 0);
-$color-text-hard: #282828;
-$color-text-main: #2d2d2d;
-$color-text-soft: #777;
+$color-text-hard: #212121;
+$color-text-main: #2a2a2a;
+$color-text-soft: #6f6f6f;
 
 $color-btn-gray: #c4c4c4;
