--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -18,7 +18,7 @@
 
       <section class="row mt-5">
         <div class="col-4">
-          <div class="h-100 gray-bg py-3 px-4">
+          <div class="h-100 gray-bg py-3 px-4 flex-col">
             <h5 class="kbl-heading pb-2">Latest News:</h5>
 
             <section class="home-news-item py-3">
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-4">
-          <div class="h-100 gray-bg py-3 px-4">
+          <div class="h-100 gray-bg py-3 px-4 flex-col">
             <h5 class="kbl-heading pb-2">Latest Events:</h5>
 
             <section class="home-news-item py-2">
@@ -76,7 +76,7 @@
               <div class="hn-date">December 10, 2013</div>
             </section>
 
-            <h6 class="kbl-heading pt-3 mb-auto">View All</h6>
+            <h6 class="kbl-heading pt-3 mt-auto">View All</h6>
           </div>
         </div>
       </section>
