--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -29,7 +29,7 @@
   </article>
 
   <article class="container-fluid pb-5 pt-1 my-5">
-    <div class="row flex-row">
+    <div class="row">
 
       <!-- News - General -->
       <article class="col">
