--- a/src/scss/pages/_importer.scss
+++ b/src/scss/pages/_importer.scss
@@ -1,3 +1,4 @@
+@import '../../views/pages/home/_home.scss';
 @import '../../views/pages/news/blog.scss';
 @import '../../views/pages/news/news.scss';
 @import '../../views/pages/people/_people.scss';
