--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -50,7 +50,7 @@
             <section class="px-4">
               <div class="kbl-heading text-center remarkable">Dr. Kaundal's Remarkable Journey</div>
               <p class="kbl-text text-center">
-                Our research has appeared in high-impact journals including <i>Briefingsin Bioinformatics</i>,
+                Our research has appeared in high-impact journals including <i>Briefings in Bioinformatics</i>,
                 <i>Plant Physiology</i>, <i>Proteomics</i>, <i>AoB Plants</i>, and many more
               </p>
             </section>
@@ -82,36 +82,26 @@
       </section>
     </article>
 
-    <section class="section-brand_quickfact section">
-        <div class="container">
-            <div class="brand_quickfact-wrap">
-                <div class="row">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <div class="brand_quickfact-content font-2 text-center">
-                                    <div class="brand_quickfact-count_value">20</div>
-                                    <div class="brand_quickfact-label">Journal Articles</div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="brand_quickfact-content font-2 text-center">
-                                    <div class="brand_quickfact-count_value">$1,524,048</div>
-                                    <div class="brand_quickfact-label">Grants Received</div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="brand_quickfact-content font-2 text-center">
-                                    <div class="brand_quickfact-count_value">7</div>
-                                    <div class="brand_quickfact-label">Research members</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container mt-5">
+      <div class="research-fact">
+        <div class="row py-5">
+          <div class="col-4 text-center">
+            <h2>20</h2>
+            <h6>JOURNAL ARTICLES</h6>
+          </div>
+
+          <div class="col-4 text-center">
+            <h2>$1,524,048</h2>
+            <h6>GRANTS RECEIVED</h6>
+          </div>
+
+          <div class="col-4 text-center">
+            <h2>7</h2>
+            <h6>RESEARCH MEMBERS</h6>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
 
     {% include "./paper.njk" %}
     {% include "./the-team.njk" %}
