--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -2,7 +2,7 @@
 {% set bs4 = true %}
 <html class="no-js" lang="en">
 {% from "universal/_header.njk" import header %}
-{{ header("home") }}
+{{ header() }}
 
 <body>
     <header class="sabbi-site-head">
