--- a/src/views/pages/home/paper.njk
+++ b/src/views/pages/home/paper.njk
@@ -20,8 +20,10 @@
                             <li>methylation patterns (Methyl-seq)</li>
                             <li>GBS data, assembly of novel genomes, etc.</li>
                         </ul>
-                        <div class="action-wrap"><a href="/research/lab-research"
-                                class=" btn-unsolemn btn-action read-more">View all Publications</a></div>
+                        <div class="action-wrap">
+                          <a href="/research/lab-research"
+                                class=" btn-unsolemn btn-action read-more">View all Publications</a>
+                        </div>
                     </div><!-- /.entry-meta -->
                 </div>
                 <aside class="col-sm-8">
