--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 {% from "universal/_header.njk" import header %}
-{{ header("lab_research") }}
+{{ header() }}
 
 <body>
   {% from "universal/_navbar.njk" import navbar %}
