--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -1,3 +1,4 @@
 @import './components/navbar';
 @import './components/carousel';
 @import './components/research-card';
+@import './components/multi-carousel';
