--- a/src/scss/components/_multi-carousel.scss
+++ b/src/scss/components/_multi-carousel.scss
@@ -1,13 +1,3 @@
-.middle {
-  background-position-x: center;
-  align-content: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-
 .MultiCarousel {
     float: left;
     overflow: hidden;
@@ -20,7 +10,7 @@ hr {
     transition: 1s ease all;
     float: left;
     display: flex;
-    flex-wrap: nowrap
+    flex-wrap: nowrap;
 }
 
 .MultiCarousel .MultiCarousel-inner .item {
@@ -46,8 +36,4 @@ hr {
 .MultiCarousel .rightLst.over {
     pointer-events: none;
     background: #ccc;
-}
-
-.fix-picture {
-  transform: scale(1.1) translate(45px, 20px);
 }
