--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import './globals';
 
 @import './export-kbl';
+@import './animations/export';
 @import './export-components';
 @import './export-pages';
 @import './pages/importer';
