Fixed publications page

--- a/src/scss/pages/_importer.scss
+++ b/src/scss/pages/_importer.scss
@@ -2,3 +2,4 @@
 @import '../../views/pages/news/blog.scss';
 @import '../../views/pages/news/news.scss';
 @import '../../views/pages/people/_people.scss';
+@import '../../views/pages/publications/publications';
